--- a/README
+++ b/README
@@ -1,2 +1,6 @@
 Author: Lexy Strom
 Date: 2020-06-16
+
+This respository is for the 2020 SSRP data workshop. 
+I will be learning data processing in python. 
+I am no longer considering dropping out because coding is scary. woo!
