--- a/README
+++ b/README
@@ -6,3 +6,5 @@ I will be learning data processing in python.
 I am no longer considering dropping out because coding is scary. woo!
 
 really out here coding dawg
+
+i am a coding prodigy. a master, if you will. 
